--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.kahlkn</groupId>
     <artifactId>artoria-extend</artifactId>
-    <version>0.8.0.20190407_beta</version>
+    <version>0.8.0.20190416-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Artoria Extend</name>
     <url>https://github.com/kahlkn/artoria-extend</url>
@@ -13,27 +13,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <artoria.version>1.0.0.20190331_beta</artoria.version>
-        <junit.version>4.11</junit.version>
-        <servlet.version>3.1.0</servlet.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <logback.version>1.2.2</logback.version>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <java.version>1.6</java.version>
         <commons-logging.version>1.2</commons-logging.version>
-        <log4j.version>1.2.17</log4j.version>
-        <!--<spring-boot-autoconfigure.version>1.5.14.RELEASE</spring-boot-autoconfigure.version>-->
-        <!--<spring-boot-starter-web.version>1.5.14.RELEASE</spring-boot-starter-web.version>-->
-        <spring-boot-autoconfigure.version>2.0.3.RELEASE</spring-boot-autoconfigure.version>
-        <spring-boot-starter-web.version>2.0.3.RELEASE</spring-boot-starter-web.version>
-        <spring-boot-starter-aop.version>2.0.3.RELEASE</spring-boot-starter-aop.version>
         <spring-security.version>4.2.3.RELEASE</spring-security.version>
-        <fastjson.version>1.2.43</fastjson.version>
-        <gson.version>2.8.2</gson.version>
         <velocity.version>1.7</velocity.version>
         <freemarker.version>2.3.20</freemarker.version>
-        <spring-boot-starter-mybatis.version>1.3.1</spring-boot-starter-mybatis.version>
-        <pagehelper.version>4.1.4</pagehelper.version>
-        <cglib.version>3.2.4</cglib.version>
-        <bcprov-jdk16.version>1.46</bcprov-jdk16.version>
         <!--<curator.version>3.2.1</curator.version>-->
         <curator.version>2.11.1</curator.version>
         <poi.version>3.15</poi.version>
@@ -63,21 +48,18 @@
         <developerConnection>https://github.com/kahlkn</developerConnection>
     </scm>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
-
     <distributionManagement>
+
         <snapshotRepository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+
         <repository>
             <id>ossrh</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
+
     </distributionManagement>
 
     <dependencies>
@@ -85,61 +67,63 @@
         <dependency>
             <groupId>com.github.kahlkn</groupId>
             <artifactId>artoria</artifactId>
-            <version>${artoria.version}</version>
+            <version>1.0.0.20190415-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.7.25</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>${spring-boot-autoconfigure.version}</version>
+            <version>2.0.3.RELEASE</version>
             <scope>provided</scope>
         </dependency>
 
 		 <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
 
 		<!--<dependency>-->
             <!--<groupId>org.slf4j</groupId>-->
             <!--<artifactId>slf4j-log4j12</artifactId>-->
-            <!--<version>${slf4j.version}</version>-->
+            <!--<version>1.7.25</version>-->
             <!--<scope>test</scope>-->
         <!--</dependency>-->
 
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <version>1.2.17</version>
             <scope>provided</scope>
         </dependency>
 
         <!--<dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.version}</version>
+            <version>1.2.2</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
+            <version>1.2.2</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-access</artifactId>
-            <version>${logback.version}</version>
+            <version>1.2.2</version>
             <scope>provided</scope>
         </dependency>-->
 
@@ -147,7 +131,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.version}</version>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -156,14 +140,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot-starter-web.version}</version>
+            <version>2.0.3.RELEASE</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-            <version>${spring-boot-starter-aop.version}</version>
+            <version>2.0.3.RELEASE</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -172,14 +156,14 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${spring-boot-starter-mybatis.version}</version>
+            <version>1.3.1</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>${pagehelper.version}</version>
+            <version>4.1.4</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -188,7 +172,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.7.25</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -197,14 +181,14 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
+            <version>1.2.43</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
+            <version>2.8.2</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -222,14 +206,14 @@
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
-            <version>${cglib.version}</version>
+            <version>3.2.4</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>${bcprov-jdk16.version}</version>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60</version>
             <scope>provided</scope>
         </dependency>
         <!-- //////////////// -->
@@ -388,13 +372,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.43</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.0.4.RELEASE</version>
@@ -434,34 +411,11 @@
         <!-- //////////////// -->
 
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.35</version>
+            <version>5.1.47</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>${velocity.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-		<!-- //// scope test //// -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- //////////////// -->
 
         <!-- //// apache poi //// -->
         <dependency>
@@ -584,6 +538,18 @@
 
     </dependencies>
 
+    <repositories>
+
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+
+    </repositories>
 
     <build>
 
@@ -596,7 +562,7 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
@@ -605,9 +571,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${maven.compiler.encoding}</encoding>
                 </configuration>
             </plugin>
 
@@ -704,26 +670,12 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.0</version>
+                        <version>3.2</version>
                         <configuration>
-                            <source>1.6</source>
-                            <target>1.6</target>
+                            <source>${java.version}</source>
+                            <target>${java.version}</target>
+                            <encoding>${maven.compiler.encoding}</encoding>
                         </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
 
                     <plugin>
@@ -761,6 +713,21 @@
                         <configuration>
                             <skipTests>false</skipTests>
                         </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
 
                 </plugins>
