--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,13 @@
         </dependency>
         <!-- ///// end redisson //// -->
 
+
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.2.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
