--- a/pom.xml
+++ b/pom.xml
@@ -533,6 +533,13 @@
             <version>2.2.2.RELEASE</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+            <version>1.4.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
