--- a/pom.xml
+++ b/pom.xml
@@ -520,6 +520,15 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://github.com/shibing624/similarity -->
+        <!-- https://jitpack.io -->
+        <dependency>
+            <groupId>com.github.shibing624</groupId>
+            <artifactId>similarity</artifactId>
+            <version>1.1.6</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
@@ -543,6 +552,11 @@
     </dependencies>
 
     <repositories>
+
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
 
         <repository>
             <id>sonatype-nexus-snapshots</id>
