Add the jmockdata based mock provider

--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,13 @@
         </dependency>
         <!-- ///// end redisson //// -->
 
+        <dependency>
+            <groupId>com.github.jsonzou</groupId>
+            <artifactId>jmockdata</artifactId>
+            <version>4.3.0</version>
+            <scope>provided</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>com.hankcs</groupId>
