--- a/pom.xml
+++ b/pom.xml
@@ -498,19 +498,18 @@
         <!-- ///// begin redisson //// -->
         <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson</artifactId>
-            <version>3.10.2</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.9.1</version>
-            <!-- Be fit for Spring Boot 2.0.x -->
+            <version>3.17.7</version>
             <scope>provided</scope>
         </dependency>
         <!-- ///// end redisson //// -->
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.17.2</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.github.jsonzou</groupId>
