--- a/pom.xml
+++ b/pom.xml
@@ -420,6 +420,13 @@
             <version>1.7</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.ibeetl</groupId>
+            <artifactId>beetl</artifactId>
+            <version>3.15.0.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- ///// end template engine //// -->
 
         <!-- ///// begin rss //// -->
