--- a/pom.xml
+++ b/pom.xml
@@ -629,6 +629,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.5</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
