[opti] 优化数据填充器的“数据提供者”相关代码，并且抽取基于 Service 的数据提供者抽象类

--- a/pom.xml
+++ b/pom.xml
@@ -630,6 +630,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.yulichang</groupId>
+            <artifactId>mybatis-plus-join-core</artifactId>
+            <version>1.5.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.eclipse.paho</groupId>
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.2.5</version>
