--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.kahle23</groupId>
     <artifactId>kunlun-plus</artifactId>
-    <version>1.0.0.20240217.beta</version>
+    <version>1.0.17</version>
     <packaging>jar</packaging>
     <name>kunlun-plus</name>
     <url>https://github.com/kahle23/kunlun-plus</url>
@@ -39,19 +39,19 @@
         <developerConnection>https://github.com/kahle23</developerConnection>
     </scm>
 
-    <distributionManagement>
+    <!--<distributionManagement>
 
         <snapshotRepository>
             <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
 
         <repository>
             <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <url>https://oss.sonatype.org/content/repositories/releases</url>
         </repository>
 
-    </distributionManagement>
+    </distributionManagement>-->
 
     <dependencies>
 
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>io.github.kahle23</groupId>
             <artifactId>kunlun</artifactId>
-            <version>1.0.0.20240217.beta</version>
+            <version>1.0.17</version>
         </dependency>
         <!-- ///// end kunlun //// -->
 
@@ -762,14 +762,13 @@
                 <plugins>
 
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.4</version>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.8.0</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <publishingServerId>ossrh</publishingServerId>
+                            <autoPublish>true</autoPublish>
                         </configuration>
                     </plugin>
 
